name:              alven
version:           0.4.0
cabal-version:     >= 1.8
build-type:        Simple

data-files: static/combined/*.css
          , config/*.yml
          , static/css/*.css
          , static/fonts/*.eot
          , static/fonts/*.svg
          , static/fonts/*.ttf
          , static/fonts/*.woff
          , static/img/*.png
          , static/js/*.js
          , static/js/*.min.js

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: lib, app
    exposed-modules: Application
                     Foreign.Lua
                     Foreign.Lua.API
                     Foreign.Lua.Types
                     Foreign.Lua.Util
                     Foundation
                     Handler.Admin
                     Handler.Admin.Page
                     Handler.Admin.Theme
                     Handler.Admin.User
                     Handler.Common
                     Handler.Public.Page
                     Import
                     Import.NoFoundation
                     Layout.Component.Alert
                     Layout.Admin
                     Layout.Util
                     Model.TextPage
                     Model.User
                     Model
                     Settings
                     Settings.StaticFiles
                     Plugin.Auth.Email
                     Plugin.PasswordStore

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ld-options:    -pthread
        ghc-options:   -Wall -Werror -fwarn-tabs -O2

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                RecordWildCards
                ScopedTypeVariables
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns
                Rank2Types

    build-depends: aeson
                 , attoparsec
                 , base
                 , base16-bytestring
                 , base64-bytestring
                 , binary
                 , blaze-html
                 , blaze-markup
                 , byteable
                 , bytestring
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , containers
                 , cryptohash
                 , data-default
                 , directory
                 , email-validate
                 , esqueleto
                 , fast-logger
                 , file-embed
                 , foreign-store
                 , filemanip
                 , hjsmin
                 , hslua
                 , http-conduit
                 , markdown
                 , monad-control
                 , monad-logger
                 , nonce
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , process
                 , random
                 , safe
                 , shakespeare
                 , system-filepath
                 , template-haskell
                 , text
                 , time
                 , unordered-containers
                 , vector
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-static
                 , yesod-text-markdown

executable alven
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, alven

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N -Wall -Werror

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: aeson
                 , HUnit
                 , QuickCheck
                 , alven
                 , base
                 , classy-prelude
                 , classy-prelude-yesod
                 , hspec
                 , monad-logger
                 , persistent
                 , persistent-postgresql
                 , process
                 , resourcet
                 , text
                 , transformers
                 , wai-extra
                 , yesod
                 , yesod-core
                 , yesod-test

benchmark bench
    type:              exitcode-stdio-1.0
    main-is:           Bench.hs
    hs-source-dirs:    bench

    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: aeson
                 , abstract-par
                 , alven
                 , base
                 , bytestring
                 , criterion
                 , file-embed
                 , text
